tests/sumo/meso/junction_control/tls_coordination/bad/control.limited/output.sumo
Loading net-file from 'net.net.xml'... done (2ms).
Loading additional-files from 'input_additional.add.xml'... done (0ms).
Loading done.
Simulation started with time: 0.00
Simulation ended at time: 107.00
Reason: All vehicles have left the simulation.
Performance: 
 Duration: 3ms
 Real time factor: 35666.7
 UPS: 293333.333333
Vehicles: 
 Inserted: 30
 Running: 0
 Waiting: 0
Statistics (avg):
 RouteLength: 300.00
 Duration: 29.33
 WaitingTime: 0.47
 TimeLoss: 7.26
 DepartDelay: 0.00

